# Nbody3D

./: CMakeLists.txt  main.cpp
include/: bhtree.h  camera.h  integrator.h  light.h  octree.h  render.h  shader.h  simulationdata.h  sphere.h  svotree.h
shader/: shader.frag  shader.vert
src/: bhtree.cpp  light.cpp  octree.cpp  render.cpp  sphere.cpp  svotree.cpp
test/: CMakeLists.txt  SVOctreeTest.cpp
